Hide the default comment form, to avoid layout issues when previewing posts on phones.

--- a/assets/stylesheets/content.less
+++ b/assets/stylesheets/content.less
@@ -47,3 +47,7 @@ time {
   }
 
 }
+
+#respond {
+  display: none;
+}
